--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -11,3 +11,12 @@ input[type="number"]::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+.nav-link {
+  @apply px-3 py-2 rounded-lg transition
+         text-zinc-400 hover:text-zinc-100
+         hover:bg-zinc-800/60;
+}
+
+.nav-link.router-link-active {
+  @apply bg-zinc-800/80 text-white;
+}
